--- a/presentación/custom.scss
+++ b/presentación/custom.scss
@@ -3,12 +3,12 @@
 /*-- scss:defaults --*/
 
 // fonts
-$font-family-sans-serif: "Atkinson Hyperlegible", Helvetica, Arial, serif !default;
+$font-family-sans-serif: "Atkinson Hyperlegible", Helvetica, Arial, sans-serif !default;
 $presentation-font-size-root: 30px;
 $presentation-line-height: 1.2;
 
 // headings
-$presentation-heading-font: "EB Garamond";
+$presentation-heading-font: "EB Garamond", Garamond, Times, serif;
 $presentation-heading-color: #6E3A98 !default;
 
 $presentation-h1-font-size:	2.5em;
@@ -40,6 +40,18 @@ strong {
 // footer
 .reveal .footer {
   font-size: 0.4em !important;
+}
+
+.title {
+  font-weight: 600 !important;
+  line-height: 1 !important;
+}
+
+.subtitle {
+  font-family: "EB Garamond", Garamond, Times, serif !important;
+  font-size: 130%;
+  font-style: italic;
+  font-weight: normal;
 }
 
 .espaciar {
